# Market_research

./: .env.example  .gitignore  ARCHITECTURE_PATTERNS.md  BUILD_RUN.bat  NEWS_DEDUPLICATION_IMPROVEMENTS.md  NEWS_DEDUP_QUICKSTART.md  README.md  check_products.py  check_urls.py  integration_test.py  patch_html.py  pyproject.toml  requirements.txt  run.py  test_decoder.py  test_dedup.py  validate_dedup.py
.github/workflows/: pages-password-protected.yml
PPT/: 802154_Zigbee_Thread_Masterclass.pptx  build_deck.py  build_deck_from_template.py
data/: ai_prefs.json  ai_qa_cache.json  ai_recent.json  auto_update_state.json  briefing_input.json  briefing_output.json  competitors.json  customers.json  events.json  external.json  github_repos.json  google_feed_failures.json  news_cache.json  roadmap_input.json  roadmap_output.json  standards.json
docs/: ai.html  aliro.html  applications.html  bluetooth.html  briefing.html  competitors.html  customers.html  events.html  filings.html  github.html  ieee15_4.html  index.html  matter.html  news.html  opportunity.html  patents.html  relationships.html  roadmap.html  standards.html  technology.html  thread.html  threat.html  wifi.html
scripts/: BUILD_RUN.bat  Build_open_site.py  built_ran.bat  fetch_build_commit.bat  fetch_build_commit.ps1  loop.py  nightly_reindex.ps1  panasonic_docx_to_xlsx.py  run_site_24x7.ps1  setup_daily_task.ps1  update_loop.ps1
src/bluetooth_news/: __init__.py  aggregator.py  ai_assistant.py  ai_server.py  applications_data.py  auto_update.py  briefing.py  cache.py  classifier.py  cli.py  data_loader.py  (+13 more)
